-- Oracle AI Database Free 26ai. Execute com F5, como MEDISTOCK.
-- Criacao inicial: execute uma unica vez em um schema novo.
SET DEFINE OFF
SET SERVEROUTPUT ON
WHENEVER SQLERROR EXIT FAILURE ROLLBACK

BEGIN
    IF SYS_CONTEXT('USERENV', 'SESSION_USER') <> 'MEDISTOCK'
       OR SYS_CONTEXT('USERENV', 'CON_NAME') <> 'FREEPDB1' THEN
        RAISE_APPLICATION_ERROR(-20090,
            'Execute este arquivo na conexao MEDISTOCK do FREEPDB1.');
    END IF;
END;
/

CREATE TABLE USUARIOS (
    ID NUMBER(19,0) GENERATED BY DEFAULT ON NULL AS IDENTITY,
    PRIMEIRO_NOME VARCHAR2(80 CHAR) NOT NULL,
    ULTIMO_NOME VARCHAR2(80 CHAR) NOT NULL,
    EMAIL_INSTITUCIONAL VARCHAR2(150 CHAR) NOT NULL,
    SENHA_HASH VARCHAR2(255 CHAR) NOT NULL,
    CRIADO_EM TIMESTAMP(6) DEFAULT LOCALTIMESTAMP NOT NULL,
    CONSTRAINT PK_USUARIOS PRIMARY KEY (ID),
    CONSTRAINT UK_USUARIO_EMAIL UNIQUE (EMAIL_INSTITUCIONAL)
);

COMMENT ON COLUMN USUARIOS.ID IS 'Chave primária; gerada pelo Oracle.';
COMMENT ON COLUMN USUARIOS.PRIMEIRO_NOME IS 'Primeiro nome do usuário.';
COMMENT ON COLUMN USUARIOS.ULTIMO_NOME IS 'Sobrenome do usuário.';
COMMENT ON COLUMN USUARIOS.EMAIL_INSTITUCIONAL IS 'E-mail institucional único; a API normaliza para minúsculas.';
COMMENT ON COLUMN USUARIOS.SENHA_HASH IS 'Hash BCrypt produzido pelo cadastro da API.';
COMMENT ON COLUMN USUARIOS.CRIADO_EM IS 'Data e hora de criação, sem fuso no modelo atual.';

CREATE TABLE HOSPITAIS (
    ID NUMBER(19,0) GENERATED BY DEFAULT ON NULL AS IDENTITY,
    NOME VARCHAR2(150 CHAR) NOT NULL,
    ENDERECO VARCHAR2(200 CHAR),
    CIDADE VARCHAR2(80 CHAR),
    ESTADO VARCHAR2(2 CHAR),
    LATITUDE BINARY_DOUBLE NOT NULL,
    LONGITUDE BINARY_DOUBLE NOT NULL,
    CONSTRAINT PK_HOSPITAIS PRIMARY KEY (ID)
);

COMMENT ON COLUMN HOSPITAIS.ID IS 'Chave primária; gerada pelo Oracle.';
COMMENT ON COLUMN HOSPITAIS.NOME IS 'Nome do hospital.';
COMMENT ON COLUMN HOSPITAIS.ENDERECO IS 'Endereço do hospital.';
COMMENT ON COLUMN HOSPITAIS.CIDADE IS 'Cidade.';
COMMENT ON COLUMN HOSPITAIS.ESTADO IS 'Sigla da unidade federativa.';
COMMENT ON COLUMN HOSPITAIS.LATITUDE IS 'Coordenada para cálculos geográficos.';
COMMENT ON COLUMN HOSPITAIS.LONGITUDE IS 'Coordenada para cálculos geográficos.';

CREATE TABLE ITENS_ESTOQUE (
    ID NUMBER(19,0) GENERATED BY DEFAULT ON NULL AS IDENTITY,
    NOME VARCHAR2(150 CHAR) NOT NULL,
    QUANTIDADE_ATUAL NUMBER(10,0) NOT NULL,
    QUANTIDADE_MINIMA NUMBER(10,0) NOT NULL,
    UNIDADE_MEDIDA VARCHAR2(20 CHAR),
    LOCAL_ARMAZENAMENTO VARCHAR2(150 CHAR),
    HOSPITAL_ID NUMBER(19,0) NOT NULL,
    VALIDADE DATE,
    CUSTO_UNITARIO NUMBER(12,2),
    ALTO_CUSTO_BAIXA_DEMANDA BOOLEAN DEFAULT FALSE NOT NULL,
    ATUALIZADO_EM TIMESTAMP(6) DEFAULT LOCALTIMESTAMP,
    CONSTRAINT PK_ITENS_ESTOQUE PRIMARY KEY (ID),
    CONSTRAINT CK_ITEM_ATUAL CHECK (QUANTIDADE_ATUAL >= 0),
    CONSTRAINT CK_ITEM_MINIMA CHECK (QUANTIDADE_MINIMA >= 0),
    CONSTRAINT CK_ITEM_CUSTO CHECK (CUSTO_UNITARIO >= 0),
    CONSTRAINT FK_ITEM_HOSPITAL FOREIGN KEY (HOSPITAL_ID) REFERENCES HOSPITAIS(ID)
);

COMMENT ON COLUMN ITENS_ESTOQUE.ID IS 'Chave primária; gerada pelo Oracle.';
COMMENT ON COLUMN ITENS_ESTOQUE.NOME IS 'Nome do insumo.';
COMMENT ON COLUMN ITENS_ESTOQUE.QUANTIDADE_ATUAL IS 'Saldo atual; não negativo.';
COMMENT ON COLUMN ITENS_ESTOQUE.QUANTIDADE_MINIMA IS 'Limite mínimo do estoque; não negativo.';
COMMENT ON COLUMN ITENS_ESTOQUE.UNIDADE_MEDIDA IS 'Unidade usada para as quantidades.';
COMMENT ON COLUMN ITENS_ESTOQUE.LOCAL_ARMAZENAMENTO IS 'Local do item dentro do hospital.';
COMMENT ON COLUMN ITENS_ESTOQUE.HOSPITAL_ID IS 'FK para HOSPITAIS.ID; local atual do item.';
COMMENT ON COLUMN ITENS_ESTOQUE.VALIDADE IS 'Data de validade.';
COMMENT ON COLUMN ITENS_ESTOQUE.CUSTO_UNITARIO IS 'Custo unitário; não negativo.';
COMMENT ON COLUMN ITENS_ESTOQUE.ALTO_CUSTO_BAIXA_DEMANDA IS 'Indica elegibilidade para análise de redistribuição.';
COMMENT ON COLUMN ITENS_ESTOQUE.ATUALIZADO_EM IS 'Última atualização; a API atualiza via @PreUpdate.';

CREATE TABLE HISTORICO_CONSUMO (
    ID NUMBER(19,0) GENERATED BY DEFAULT ON NULL AS IDENTITY,
    ITEM_ESTOQUE_ID NUMBER(19,0) NOT NULL,
    HOSPITAL_ID NUMBER(19,0) NOT NULL,
    MES_REFERENCIA DATE NOT NULL,
    QUANTIDADE_CONSUMIDA NUMBER(10,0) NOT NULL,
    CONSTRAINT PK_HISTORICO_CONSUMO PRIMARY KEY (ID),
    CONSTRAINT CK_HIST_QUANTIDADE CHECK (QUANTIDADE_CONSUMIDA >= 0),
    CONSTRAINT FK_HIST_ITEM FOREIGN KEY (ITEM_ESTOQUE_ID) REFERENCES ITENS_ESTOQUE(ID),
    CONSTRAINT FK_HIST_HOSPITAL FOREIGN KEY (HOSPITAL_ID) REFERENCES HOSPITAIS(ID)
);

COMMENT ON COLUMN HISTORICO_CONSUMO.ID IS 'Chave primária; gerada pelo Oracle.';
COMMENT ON COLUMN HISTORICO_CONSUMO.ITEM_ESTOQUE_ID IS 'FK para ITENS_ESTOQUE.ID.';
COMMENT ON COLUMN HISTORICO_CONSUMO.HOSPITAL_ID IS 'FK para HOSPITAIS.ID; hospital que registrou a demanda.';
COMMENT ON COLUMN HISTORICO_CONSUMO.MES_REFERENCIA IS 'Referência do consumo; a carga usa o primeiro dia do mês.';
COMMENT ON COLUMN HISTORICO_CONSUMO.QUANTIDADE_CONSUMIDA IS 'Quantidade consumida registrada; não negativa.';

CREATE TABLE ENTREGAS (
    ID NUMBER(19,0) GENERATED BY DEFAULT ON NULL AS IDENTITY,
    ITEM_ESTOQUE_ID NUMBER(19,0) NOT NULL,
    HOSPITAL_DESTINO_ID NUMBER(19,0) NOT NULL,
    QUANTIDADE NUMBER(10,0) NOT NULL,
    STATUS VARCHAR2(20 CHAR) DEFAULT 'PENDENTE' NOT NULL,
    DATA_PREVISTA DATE,
    TRANSPORTADORA VARCHAR2(150 CHAR),
    CRIADO_EM TIMESTAMP(6) DEFAULT LOCALTIMESTAMP,
    CONSTRAINT PK_ENTREGAS PRIMARY KEY (ID),
    CONSTRAINT CK_ENTREGA_STATUS CHECK (STATUS IN ('PENDENTE','EM_ROTA','CONCLUIDA','CANCELADA')),
    CONSTRAINT CK_ENTREGA_QUANTIDADE CHECK (QUANTIDADE > 0),
    CONSTRAINT FK_ENTREGA_ITEM FOREIGN KEY (ITEM_ESTOQUE_ID) REFERENCES ITENS_ESTOQUE(ID),
    CONSTRAINT FK_ENTREGA_DESTINO FOREIGN KEY (HOSPITAL_DESTINO_ID) REFERENCES HOSPITAIS(ID)
);

COMMENT ON COLUMN ENTREGAS.ID IS 'Chave primária; gerada pelo Oracle.';
COMMENT ON COLUMN ENTREGAS.ITEM_ESTOQUE_ID IS 'FK para ITENS_ESTOQUE.ID.';
COMMENT ON COLUMN ENTREGAS.HOSPITAL_DESTINO_ID IS 'FK para HOSPITAIS.ID.';
COMMENT ON COLUMN ENTREGAS.QUANTIDADE IS 'Quantidade da entrega; maior que zero.';
COMMENT ON COLUMN ENTREGAS.STATUS IS 'PENDENTE, EM_ROTA, CONCLUIDA ou CANCELADA.';
COMMENT ON COLUMN ENTREGAS.DATA_PREVISTA IS 'Data prevista para a entrega.';
COMMENT ON COLUMN ENTREGAS.TRANSPORTADORA IS 'Nome da transportadora.';
COMMENT ON COLUMN ENTREGAS.CRIADO_EM IS 'Data e hora de criação.';

CREATE TABLE TRANSFERENCIAS (
    ID NUMBER(19,0) GENERATED BY DEFAULT ON NULL AS IDENTITY,
    ITEM_ESTOQUE_ID NUMBER(19,0) NOT NULL,
    HOSPITAL_ORIGEM_ID NUMBER(19,0) NOT NULL,
    HOSPITAL_DESTINO_ID NUMBER(19,0) NOT NULL,
    QUANTIDADE NUMBER(10,0) NOT NULL,
    STATUS VARCHAR2(20 CHAR) DEFAULT 'PENDENTE' NOT NULL,
    DISTANCIA_KM BINARY_DOUBLE,
    TEMPO_ESTIMADO_MIN BINARY_DOUBLE,
    MOTIVO VARCHAR2(300 CHAR),
    GERADO_POR_IA BOOLEAN DEFAULT FALSE NOT NULL,
    CRIADO_EM TIMESTAMP(6) DEFAULT LOCALTIMESTAMP,
    CONSTRAINT PK_TRANSFERENCIAS PRIMARY KEY (ID),
    CONSTRAINT CK_TRANSF_STATUS CHECK (STATUS IN ('PENDENTE','EM_ROTA','CONCLUIDA','CANCELADA')),
    CONSTRAINT CK_TRANSF_QUANTIDADE CHECK (QUANTIDADE > 0),
    CONSTRAINT FK_TRANSF_ITEM FOREIGN KEY (ITEM_ESTOQUE_ID) REFERENCES ITENS_ESTOQUE(ID),
    CONSTRAINT FK_TRANSF_ORIGEM FOREIGN KEY (HOSPITAL_ORIGEM_ID) REFERENCES HOSPITAIS(ID),
    CONSTRAINT FK_TRANSF_DESTINO FOREIGN KEY (HOSPITAL_DESTINO_ID) REFERENCES HOSPITAIS(ID)
);

COMMENT ON COLUMN TRANSFERENCIAS.ID IS 'Chave primária; gerada pelo Oracle.';
COMMENT ON COLUMN TRANSFERENCIAS.ITEM_ESTOQUE_ID IS 'FK para ITENS_ESTOQUE.ID.';
COMMENT ON COLUMN TRANSFERENCIAS.HOSPITAL_ORIGEM_ID IS 'FK para HOSPITAIS.ID; origem.';
COMMENT ON COLUMN TRANSFERENCIAS.HOSPITAL_DESTINO_ID IS 'FK para HOSPITAIS.ID; destino.';
COMMENT ON COLUMN TRANSFERENCIAS.QUANTIDADE IS 'Quantidade a transferir; maior que zero.';
COMMENT ON COLUMN TRANSFERENCIAS.STATUS IS 'PENDENTE, EM_ROTA, CONCLUIDA ou CANCELADA.';
COMMENT ON COLUMN TRANSFERENCIAS.DISTANCIA_KM IS 'Distância estimada em quilômetros.';
COMMENT ON COLUMN TRANSFERENCIAS.TEMPO_ESTIMADO_MIN IS 'Tempo estimado em minutos.';
COMMENT ON COLUMN TRANSFERENCIAS.MOTIVO IS 'Justificativa da transferência.';
COMMENT ON COLUMN TRANSFERENCIAS.GERADO_POR_IA IS 'Indica se a origem do registro foi uma sugestão de IA.';
COMMENT ON COLUMN TRANSFERENCIAS.CRIADO_EM IS 'Data e hora de criação.';

-- Indices das FKs; PKs e UNIQUE ja possuem indices geridos pelo Oracle.
CREATE INDEX IX_ITEM_HOSPITAL ON ITENS_ESTOQUE (HOSPITAL_ID);
CREATE INDEX IX_HIST_ITEM_HOSP_MES ON HISTORICO_CONSUMO (ITEM_ESTOQUE_ID, HOSPITAL_ID, MES_REFERENCIA);
CREATE INDEX IX_HIST_HOSPITAL ON HISTORICO_CONSUMO (HOSPITAL_ID);
CREATE INDEX IX_ENTREGA_ITEM ON ENTREGAS (ITEM_ESTOQUE_ID);
CREATE INDEX IX_ENTREGA_DESTINO ON ENTREGAS (HOSPITAL_DESTINO_ID);
CREATE INDEX IX_TRANSF_ITEM ON TRANSFERENCIAS (ITEM_ESTOQUE_ID);
CREATE INDEX IX_TRANSF_ORIGEM ON TRANSFERENCIAS (HOSPITAL_ORIGEM_ID);
CREATE INDEX IX_TRANSF_DESTINO ON TRANSFERENCIAS (HOSPITAL_DESTINO_ID);

PROMPT Estrutura criada. Confira a lista abaixo: seis tabelas.
SELECT TABLE_NAME FROM USER_TABLES ORDER BY TABLE_NAME;
